glib-macros/tests/closure_compiletest/12-closure-duplicate-attribute.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[strong]#[strong] v, move || {});
}
